tests/syntax_errors/sasha35_2.tl
-- test case 35.
-- Description : syntax error

-- Expected : '2'
require "ifj21" 
function 123name ()
end                

